// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nested try 1`] = `
"---
try {
  try {
    throw new Error("oops");
  } finally {
    console.log("finally");
  }
} catch (ex) {
  console.error("outer", ex.message);
}
---

<script>
  try {
    try {
      throw new Error("oops");
    } finally {
      console.log("finally");
    }
  } catch (ex) {
    console.error("outer", ex.message);
  }
</script>
"
`;

exports[`try...catch 1`] = `
"---
try {
  throw new TypeError("oops");
} catch (ex) {
  console.log(ex.name);
  console.log(ex.message);
}
---

<script>
  try {
    throw new TypeError("oops");
  } catch (ex) {
    console.log(ex.name);
    console.log(ex.message);
  }
</script>
"
`;

exports[`try...catch...finally 1`] = `
"---
try {
  throw new Error("oops");
} catch (ex) {
  console.error(ex.message);
} finally {
  console.log("finally");
}
---

<script>
  try {
    throw new Error("oops");
  } catch (ex) {
    console.error(ex.message);
  } finally {
    console.log("finally");
  }
</script>
"
`;

exports[`try...finally 1`] = `
"---
openMyFile();
try {
  writeMyFile(theData);
} finally {
  closeMyFile();
}
---

<script>
  openMyFile();
  try {
    writeMyFile(theData);
  } finally {
    closeMyFile();
  }
</script>
"
`;
